test/library/standard/Sort/errors/sortDomainArray.sparse5.good
sortDomainArray.chpl:37: error: isSorted() is currently only supported for 1D rectangular arrays
